--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+
+<html>
+<body>
+<link rel="stylesheet" type="text/css" href="./styles.css"  />
+<ul class="main-menu">
+  <li>Home</li>
+  <li><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589"></li>
+  <li></li>
+  <li></li>
+</ul>
+  </body>
