--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 
 <html>
 <body>
-<link rel="stylesheet" type="text/css" href="./styles.css"  />
+<link rel="stylesheet" type="text/css" href="styles.css"/>
 <ul class="main-menu">
-  <li>Home</li>
   <li><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589"></li>
   <li></li>
   <li></li>
