--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <body>
-<link rel="stylesheet" type="text/css" href="styles.css"/>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 <ul class="main-menu">
   <li><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589"></li>
   <li></li>
