--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <body>
 <link rel="stylesheet" type="text/css" href="styles.css"/>
 <ul class="main-menu">
-  <li><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589"></li>
-  <li></li>
-  <li></li>
+  <li><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589" class="home-icon"></li>
+  <li>About</li>
+  <li>Good Birds</li>
+  <li>Become a Bird Owner</li>
+  <li>Contact</li>
 </ul>
   </body>
