--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <ul class="main-menu">
-    <li><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589" class="home-icon"></li>
+    <li><a href="/index.html"><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589" class="home-icon"></a></li>
     <li><a href=""><button type="button" class="btn btn-light">About</button></a></li>
     <li><a href=""><button type="button" class="btn btn-light">Good Birds</button></a></li>
     <li><a href=""><button type="button" class="btn btn-light">How to Own a bird</button></a></li>
