--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 
 <html>
 <body>
-  <link rel="stylesheet" type="text/css" href="styles.css"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-  <ul class="main-menu">
-    <li><a href="/index.html"><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589" class="home-icon"></a></li>
-    <li><a href=""><button type="button" class="btn btn-light">About</button></a></li>
-    <li><a href=""><button type="button" class="btn btn-light">Good Birds</button></a></li>
-    <li><a href=""><button type="button" class="btn btn-light">How to Own a bird</button></a></li>
-    <li><a href=""><button type="button" class="btn btn-light">Contact</button></a></li>
-  </ul>
+  <div class="flex-container">
+    <div class="flex-nav">
+      <div class="flex-box1">
+        About
+      </div>
+      <div class="flex-box2">
+        Good Birds
+      </div>
+      <div class="flex-box3">
+        How to Own a Bird
+      </div>
+      <div class="flex-box4">
+        Contact
+      </div>
+    </div>
+    <div class="flex-des">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate massa ex. Nullam auctor ex ac massa mollis, vel laoreet mauris pulvinar. Donec et odio laoreet, consequat nisi vel, egestas felis. Pellentesque a urna leo. Nunc aliquet vehicula arcu, eget congue erat mollis eget. Maecenas elit est, elementum in tortor at, mattis blandit purus. Sed erat diam, venenatis ac ultricies et, tristique id enim. Curabitur sed blandit dolor. Nam felis metus, euismod in ex ut, vestibulum consequat quam. Vivamus vel ante condimentum, maximus erat sit amet, tempus mi. Duis ullamcorper risus in felis hendrerit, eget dictum augue faucibus. Cras aliquam interdum mi et sagittis. Pellentesque commodo est vulputate felis porta rhoncus.
+      </p>
+<p>Curabitur vulputate elit id tempus elementum. Praesent tempor sagittis purus at vestibulum. Nullam interdum tincidunt felis, id dapibus ex consequat ut. Praesent ultricies dui id semper pretium. Aenean id semper tellus. Sed interdum massa sit amet metus mattis, in luctus arcu pellentesque. Nam nec arcu porta, molestie odio ac, placerat arcu.
+      </p>
+<p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin augue tortor, facilisis sit amet viverra id, cursus vitae sem. Mauris id mauris nec est molestie consectetur et eu lorem. Donec in massa in dui gravida euismod et ac sem. Maecenas nec ultricies elit, vel cursus est. Sed at feugiat urna, eu mollis leo. Nulla lobortis felis neque, sed suscipit augue blandit vel. Donec pretium iaculis est, bibendum lobortis nunc vehicula sed. In vel ante a nisi auctor porta eget vel lectus. Pellentesque tristique lorem a nunc dictum, ut suscipit nulla dapibus. Donec ultricies eros ultricies, feugiat tortor non, rutrum arcu. Pellentesque nec tempus nulla. Phasellus lacinia felis nec mattis accumsan.
+      </p>
+    </div>
+  </div>
 </body>
+</html>
