iframe video test

--- a/index.html
+++ b/index.html
@@ -5,29 +5,38 @@
 
 <html>
 <body>
+<div class="main">
   <div class="flex-container">
     <div class="flex-nav">
-      <div class="flex-box1">
+      <div class="all-box flex-box1">
+	  <a href="about.html">
         About
+		</a>
       </div>
-      <div class="flex-box2">
-        Good Birds
+      <div class="all-box flex-box2">
+	  <a href="good-birds.html">
+        List of Good Birds
+		</a>
       </div>
-      <div class="flex-box3">
-        How to Own a Bird
+      <div class="all-box flex-box3">
+	  <a href="good-birds.html">
+        How to Care For a Bird
+		</a>
       </div>
-      <div class="flex-box4">
+      <div class="all-box flex-box4">
+	  <a href="good-birds.html">
         Contact
+		</a>
       </div>
     </div>
     <div class="flex-des">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vulputate massa ex. Nullam auctor ex ac massa mollis, vel laoreet mauris pulvinar. Donec et odio laoreet, consequat nisi vel, egestas felis. Pellentesque a urna leo. Nunc aliquet vehicula arcu, eget congue erat mollis eget. Maecenas elit est, elementum in tortor at, mattis blandit purus. Sed erat diam, venenatis ac ultricies et, tristique id enim. Curabitur sed blandit dolor. Nam felis metus, euismod in ex ut, vestibulum consequat quam. Vivamus vel ante condimentum, maximus erat sit amet, tempus mi. Duis ullamcorper risus in felis hendrerit, eget dictum augue faucibus. Cras aliquam interdum mi et sagittis. Pellentesque commodo est vulputate felis porta rhoncus.
-      </p>
-<p>Curabitur vulputate elit id tempus elementum. Praesent tempor sagittis purus at vestibulum. Nullam interdum tincidunt felis, id dapibus ex consequat ut. Praesent ultricies dui id semper pretium. Aenean id semper tellus. Sed interdum massa sit amet metus mattis, in luctus arcu pellentesque. Nam nec arcu porta, molestie odio ac, placerat arcu.
-      </p>
-<p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin augue tortor, facilisis sit amet viverra id, cursus vitae sem. Mauris id mauris nec est molestie consectetur et eu lorem. Donec in massa in dui gravida euismod et ac sem. Maecenas nec ultricies elit, vel cursus est. Sed at feugiat urna, eu mollis leo. Nulla lobortis felis neque, sed suscipit augue blandit vel. Donec pretium iaculis est, bibendum lobortis nunc vehicula sed. In vel ante a nisi auctor porta eget vel lectus. Pellentesque tristique lorem a nunc dictum, ut suscipit nulla dapibus. Donec ultricies eros ultricies, feugiat tortor non, rutrum arcu. Pellentesque nec tempus nulla. Phasellus lacinia felis nec mattis accumsan.
-      </p>
+	<h1>Welcome</h1>
+	<br>
+      <p class="intro">What is the first animal that comes to your mind when you hear the term "Good Pets"? Is it a dog? A cat? Or maybe a hamster? 
+	  Whatever your answer may be now, it is my goal today to convince you that just like cats and dogs, birds too, can be great companions too! <br>
+	  <sub>(Perhaps even better than dogs and cats)</sub></p>
     </div>
+  </div>
   </div>
 </body>
 </html>
