--- a/about.html
+++ b/about.html
@@ -2,14 +2,26 @@
 
 <html>
 <body>
+<div class="sub">
   <link rel="stylesheet" type="text/css" href="styles.css"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <ul class="main-menu">
-    <li><a href="/index.html"><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589" class="home-icon"></a></li>
-    <li><a href=""><button type="button" class="btn btn-light">About</button></a></li>
-    <li><a href=""><button type="button" class="btn btn-light">Good Birds</button></a></li>
-    <li><a href=""><button type="button" class="btn btn-light">How to Own a bird</button></a></li>
-    <li><a href=""><button type="button" class="btn btn-light">Contact</button></a></li>
+    <li class="home"><a href="index.html"><img src="https://s3.amazonaws.com/iconbros/icons/icon_pngs/000/000/647/original/bird.png?1512755589" class="home-icon"></a></li>
+
+    <li class="active"><a href="">About</a></li>
+
+    <li><a href="">List of Good Birds</a></li>
+
+    <li><a href="">How to Care For a bird</a></li>
+
+    <li><a href="">Contact</a></li>
   </ul>
+
+  <div class="main-body">
+  <h1>About this site</h1>
+  <p>More often than not, I see people dismissing the possibility of birds being potential companions. To those people, birds are loud, obnixous, and maybe even dangerous (just look at their beaks *gasp*).</p>
+  <p>By making this website, it is my goal to show who feel indifferent or fear towards birds that, just like puppies and kitties, birds can become amazing, intelligent, loving pets.</p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/CEQuDyuQFKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  </div>
 </body>
