--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 		</a>
       </div>
       <div class="all-box flex-box2">
-	  <a href="good-birds.html">
+	  <a href="birds.html">
         List of Good Birds
 		</a>
       </div>
       <div class="all-box flex-box3">
-	  <a href="good-birds.html">
+	  <a href="caring.html">
         How to Care For a Bird
 		</a>
       </div>
       <div class="all-box flex-box4">
-	  <a href="good-birds.html">
+	  <a href="contact.html">
         Contact
 		</a>
       </div>
