--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
     <div class="flex-des">
 	<h1>Welcome</h1>
 	<br>
-      <p class="intro">What is the first animal that comes to your mind when you hear the term "Good Pets"? Is it a dog? A cat? Or maybe a hamster? 
-	  Whatever your answer may be now, it is my goal today to convince you that just like cats and dogs, birds too, can be great companions too! <br>
-	  <sub>(Perhaps even better than dogs and cats)</sub></p>
+      <p class="text">Cagebirds such as canaries, budgerigars, cockatoos, lovebirds, quails, finches, and parrots are popular pets, whether for their song, their behaviour, their colourful plumage, or their ability to mimic speech. Among reasons for their popularity is that they can be kept in homes too small or otherwise unsuitable for dogs or cats.</p>
     </div>
   </div>
   </div>
