--- a/calculator.html
+++ b/calculator.html
@@ -71,7 +71,7 @@
 				}
 
 				//if button pressed is ce, remove last added char
-				else if(id === 'ce'){
+				else if(id === 'ce' && currAns != ''){
 					$("#result").val(currAns.slice(0,-1));
 				}
 
