--- a/calculator.html
+++ b/calculator.html
@@ -51,20 +51,18 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 	$(document).ready(function() {
-
-		var newEq = true;
+		
 		$(".btn").click(function() {
 			try{
 				var id  = $(this).attr("id");
 				var currAns = $("#result").val();
 				var prevAns = $('#prev').val();
 				
-				//if it's a new equation and a previous answer exists, start a new equation
-				if(newEq === true && prevAns != '' && id != '+' && id != '-' && id!= '*' && id!= '/' && id!= '%' ){
+				//if an evaluation was just completed AND next input is not an operation, start a new equation
+				if(prevAns === currAns && id != '+' && id != '-' && id!= '*' && id!= '/' && id!= '%' ){
 					$('#prev').val('');
 					$("#prev").text('Ans = '+ prevAns);
 					$("#result").val(id);
-					newEq = false;
 				}
 
 				//if button pressed is not ce AND not equals, update result value
@@ -87,6 +85,8 @@
 				}
 				catch(e){
 					$("#prev").text(currAns + '=ERROR');
+					$("#prev").val(currAns + '=ERROR');
+					$("#result").val(currAns + '=ERROR');
 				}
 		});
 	});
