--- a/calculator.html
+++ b/calculator.html
@@ -58,8 +58,8 @@
 				var currAns = $("#result").val();
 				var prevAns = $('#prev').val();
 				
-				//if an evaluation was just completed AND next input is not an operation, start a new equation
-				if(prevAns === currAns && prevAns != ''&& id != '+' && id != '-' && id!= '*' && id!= '/' && id!= '%' ){
+				//if an evaluation was just completed AND next input is a number/bracket, start a new equation
+				if(prevAns === currAns && prevAns != ''&& id != '+' && id != '-' && id!= '*' && id!= '/' && id!= '%' && id!= 'ce' && id != 'equals' ){
 					$('#prev').val('');
 					$("#prev").text('Ans = '+ prevAns);
 					$("#result").val(id);
@@ -82,12 +82,12 @@
 					$("#prev").val(ans);
 					$("#prev").text(currAns + '=');
 				}
-				}
-				catch(e){
-					$("#prev").text(currAns + '=ERROR');
-					$("#prev").val(currAns + '=ERROR');
-					$("#result").val(currAns + '=ERROR');
-				}
+			}
+			catch(e){
+				$("#prev").text(currAns + '=ERROR');
+				$("#prev").val(currAns + '=ERROR');
+				$("#result").val(currAns + '=ERROR');
+			}
 		});
 	});
 </script>
