Initial Chat Functionality Implemented

--- a/chat/index.html
+++ b/chat/index.html
@@ -23,7 +23,7 @@
 	<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 	<script>
 	    $(function () {
-			var socket = io.connect();
+			var socket = io();
 			$('form').submit(function(e){
 			  e.preventDefault(); // prevents page reloading
 			  socket.emit('chat message', $('#m').val());
